<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical" >
   
   <TextView
       android:id="@+id/statustext"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true" />

   <Button
       android:id="@+id/sysinfo"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:onClick="getSysInfo"
       android:text="@string/sysinfo"/>
   <TextView
       android:id="@+id/sysstatus"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textMultiLine"/>
   
   <Button
       android:id="@+id/wificonfig"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:onClick="doWifiConfig"
       android:text="@string/wificonfig"/>

   <TextView
       android:id="@+id/wifistatus"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textMultiLine"/>
   
   <TextView
       android:id="@+id/ipstatus"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textMultiLine"/>

   <Button
       android:id="@+id/rtsp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:onClick="doRtsp"
       android:text="@string/rtsp"/>
   <Button
       android:id="@+id/telnetd"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:onClick="doTelnet"
       android:text="@string/telnetd"/>
   <Button
       android:id="@+id/lighttpd"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:onClick="doHttp"
       android:text="@string/lighttpd"/>
   <Button
       android:id="@+id/unsignedfw"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:onClick="doUnsignedFW"
       android:text="@string/unsignedfw"/>
   
   <Button
       android:id="@+id/runbutton"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:onClick="doCommand"
       android:text="@string/command"/>

   <EditText
       android:id="@+id/command"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:inputType="text"
       android:imeOptions="actionDone"
       android:imeActionLabel="Run" />

</LinearLayout>
